Updated README for public viewing

--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+Let's Code: Test-Driven Javascript
+
+"Let's Code: Test-Driven Javascript" is a screencast series focusing on
+rigorous, professional web development. For more information, visit
+http://letscodejavascript.com
+
+This repository contains the source code for WeeWikiPaint, the application
+being developed in the series.
+
+----
+
 WeeWikiPaint
 
 To build:
