Starting instructions for building on Windows (for continuous integration)

--- a/README
+++ b/README
@@ -11,6 +11,10 @@ being developed in the series.
 
 WeeWikiPaint
 
+To build on Windows:
+- Install Git
+- Clone repository
+
 To build:
 - Assumes presence of Node.js
 - Run ./jake.sh to build
