--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,6 @@ User Stories:
 - marketing copy
 
 Engineering Tasks:
-- continuous integration
+* continuous integration
 - server-side testing
 - client-side testing
