Updated to-do list; continuous integration is finished

--- a/todo.txt
+++ b/todo.txt
@@ -14,8 +14,7 @@ User Stories:
 - marketing copy
 
 Engineering Tasks:
-* continuous integration
-- server-side testing
+* server-side testing
 - client-side testing
 
 To Do on current task:
