--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,8 @@ Engineering Tasks:
 - client-side testing
 
 To Do on current task:
-- Choose framework
-- Abstract it
-- Swap out a different framework to make sure abstraction works
+
+
+Future ideas:
+- Abstract test framework? (Swap out a different framework to make sure abstraction works)
 - Add LICENSE.TXT
