--- a/todo.txt
+++ b/todo.txt
@@ -14,11 +14,9 @@ User Stories:
 - marketing copy
 
 Engineering Tasks:
-* server-side testing
-- client-side testing
+- Create a very simple HTTP server
 
 To Do on current task:
-- make lint fail when tests fail
 
 Future ideas:
 - Abstract test framework? (Swap out a different framework to make sure abstraction works)
