Clarified NodeUnit's Windows issue

--- a/todo.txt
+++ b/todo.txt
@@ -24,4 +24,4 @@ Future ideas:
 - Abstract test framework? (Swap out a different framework to make sure abstraction works)
 
 Notes:
-- NodeUnit doesn't work properly on windows, it seems...
+- NodeUnit default reporter has minor display issue on Windows
