--- a/todo.txt
+++ b/todo.txt
@@ -14,12 +14,14 @@ User Stories:
 - marketing copy
 
 Engineering Tasks:
-- Create a very simple HTTP server
+* Create a very simple HTTP server
 
 To Do on current task:
 - Modify build script to enforce Node version
+- Integrate
 
 Future ideas:
+- Create 'fail fast' assertion code
 - Abstract test framework? (Swap out a different framework to make sure abstraction works)
 
 Notes:
