--- a/todo.txt
+++ b/todo.txt
@@ -8,21 +8,20 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories:
-* Serve 404 errors for everything else
-- Do we want a custom 404 page?
+* Do we want a custom 404 page
 - Marketing copy
 - Publish to Internet
 
 Engineering Tasks:
-* Spike serving a file
-- TDD file serving
-- design work?
+- 
 
 To Do on current task:
 
 Future ideas:
 - Create 'fail fast' assertion code
 - Abstract test framework? (Swap out a different framework to make sure abstraction works)
+- Static checking of function parameters (rather than writing tests)
+- Handle errors properly in server.js
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
