Added note about behavior of server.stop() (thanks to Michal Svoboda)

--- a/todo.txt
+++ b/todo.txt
@@ -22,6 +22,8 @@ Future ideas:
 - Abstract test framework? (Swap out a different framework to make sure abstraction works)
 - Static checking of function parameters (rather than writing tests)
 - Handle errors properly in server.js
+- server.stop() waits for open connections to close (e.g., Firefox keeps open connection).
+  Make it forcibly close?
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
