Added production home page

--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@ Engineering Tasks:
 - Write server launch code
 
 To Do on current task:
+- Put homepage.html in a good directory
 
 Future ideas:
 - Create 'fail fast' assertion code
