--- a/todo.txt
+++ b/todo.txt
@@ -17,8 +17,7 @@ Engineering Tasks:
 - Integrate into HTML page
 
 To Do on current task:
-- Get Testacular running manually with one browser
-- multiple browsers
+- Figure out best assertion framework
 - automation
 - Automatically check that we're testing against all supported browsers.
 - Move testacular.conf.js to a better location
