Added ideas about npm rebuild to to-do list

--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,7 @@ Future ideas:
   Make it forcibly close?
 - Remove Node version duplication between package.json and Jakefile.js
 - Fix httpGet duplication
+- Automated npm rebuild (Remove node_modules .bin directory from repository (and add to .gitignore) and 'npm rebuild' in jake.sh / jake.bat if .bin directory not found. Also add to CI script?)
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
