--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,8 @@ Engineering Tasks:
 - Integrate into HTML page
 
 To Do on current task:
-- automation
+- Run testacular from Jake script
+- Set up client-side linting options
 - Automatically check that we're testing against all supported browsers.
 - Move testacular.conf.js to a better location
 - Unify our test file location configuration (it's currently split between Jakefile & testacular.conf.js)
