--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,7 @@ Engineering Tasks:
 
 To Do on current task:
 - AT START OF NEXT EPISODE: Mention clean up of browser test code
+- Integrate
 
 Future ideas:
 - Create 'fail fast' assertion code
