Cleaned up Jakefile to remove old sh() function

--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,8 @@ Engineering Tasks:
 
 To Do on current task:
 - AT START OF NEXT EPISODE:
-  - Mention clean up of browser test code
+  - Mention clean up of browser test code, including loose=true option
+  - Mention upgrade of iOS Simulator (it now reports running Safari 6.0)
   - Mention Windows fixes:
     - Jake exclude() bug workaround in nodeTestFiles()
     - New testacular() method with path.normalize()
