--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,8 @@ To Do on current task:
       - Workaround (both require 'loose=true' option):
         - View output of 'jake testacular' command window instead of 'jake' command window
         - Change 'pipe' to 'inherit' in Jakefile (line 159) & remove stream capture (lines 163-167 & 171-175)
+    - 'npm' improvements:
+      - Updated integration checklist to 'npm rebuild' and check for files needing ignoring
 
 Future ideas:
 - Create 'fail fast' assertion code
@@ -37,9 +39,12 @@ Future ideas:
   Make it forcibly close?
 - Remove Node version duplication between package.json and Jakefile.js
 - Fix httpGet duplication
-- Automated npm rebuild (Remove node_modules .bin directory from repository (and add to .gitignore) and 'npm rebuild' in jake.sh / jake.bat if .bin directory not found. Also add to CI script?)
+- Automated npm rebuild ('npm rebuild' in jake.sh / jake.bat if .bin directory not found.)
 - Ensure that every browser has same of number of tests running
 - Automatically start Testacular (or provide friendlier error message when it isn't running?)
+- Automate CI script
+- Resolve npm 'extraneous' warning (due to package.json not reflecting what's in node_modules)
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
+- Testacular output cannot be parsed on Windows (issue: https://github.com/vojtajina/testacular/issues/91)
