Starting work on testing DOM

--- a/todo.txt
+++ b/todo.txt
@@ -19,8 +19,9 @@ Engineering Tasks:
 * Basic DOM test
 
 To Do on current task:
-- Make Jake success more obvious
 - Make test look at Testacular DOM
+* Insert elements into Testacular DOM
+- Assert element exists
 
 Future ideas:
 - Create 'fail fast' assertion code
