--- a/todo.txt
+++ b/todo.txt
@@ -16,10 +16,12 @@ User Stories:
 - Minify and deploy
 
 Engineering Tasks:
-* Create drawing area
+* Create drawing area using Raphael
+- Smoke test to ensure that our magic div is in our actual home page
 
 To Do on current task:
-- TDD drawing area
+- Install Raphael
+- Assert that it's been used to initialize our div
 - Modify Lint settings for client global variables
 
 Future ideas:
