--- a/todo.txt
+++ b/todo.txt
@@ -23,6 +23,8 @@ To Do on current task:
 - Respect dimensions of enclosing div
 - Figure out how to get dimensions of Raphael paper
 - Factor out common elements in our client tests
+- Modify "should be initialized" test to use Raphael.type or Raphael.vml + Raphael.svg
+  - Thanks to Vlad Gurdiga http://www.letscodejavascript.com/v1/comments/tdjs45.html
 - Modify Lint settings for client global variables
 
 Future ideas:
