--- a/todo.txt
+++ b/todo.txt
@@ -25,6 +25,7 @@ To Do on current task:
 - Factor out common elements in our client tests
 - Modify "should be initialized" test to use Raphael.type or Raphael.vml + Raphael.svg
   - Thanks to Vlad Gurdiga http://www.letscodejavascript.com/v1/comments/tdjs45.html
+- Eliminate cleanup by not adding element to document?
 - Modify Lint settings for client global variables
 
 Future ideas:
