--- a/todo.txt
+++ b/todo.txt
@@ -15,11 +15,13 @@ User Stories:
 - Minify and deploy
 
 Engineering Tasks:
-* Spike drawing a line and review it manually
-- Redo line-drawing code test-driven
+* Redo line-drawing code test-driven
 - Smoke test to ensure that our magic div is in our actual home page
 
 To Do on current task:
+* Figure out how to inspect Raphael paths
+- Factor out common initialization code?
+- Convert 'client' to be proper object rather than global singleton?
 - Modify Lint settings for client global variables
 
 Future ideas:
