--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,7 @@ Engineering Tasks:
 - Smoke test to ensure that our magic div is in our actual home page
 
 To Do on current task:
-* Figure out how to inspect Raphael paths
+* Get Raphael path testing working on IE 8
 - Factor out common initialization code?
 - Convert 'client' to be proper object rather than global singleton?
 - Modify Lint settings for client global variables
