--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@ User Stories:
 
 Engineering Tasks:
 * Redo line-drawing code test-driven
+- Clean up path()
 - Smoke test to ensure that our magic div is in our actual home page
 
 To Do on current task:
