--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,8 @@ Engineering Tasks:
 - Integrate
 
 To Do on current task:
-* Make assertions easier to write and read
+* Get basic drag to work
+- Factor out duplication in mouse event test code
 - test one click (no paths)
 - test one path
 - test multiple paths
