--- a/todo.txt
+++ b/todo.txt
@@ -15,16 +15,19 @@ User Stories:
 
 Engineering Tasks:
 * Re-do code test-driven
+- Clean up code
 - click tracking needs to account for margin, border, and padding
 - Integrate
 
 To Do on current task:
-- Take care of special cases in our mouse event handling
-- Factor out duplication in mouse event test code
 - test all cases:
 	- test one click (no paths)
 	- test one path
 	- test multiple paths
+- Take care of special cases in our mouse event handling
+  - start drag outside drawing area
+  - stop drag outside drawing area
+- Factor out duplication in mouse event test code
 - eliminate setup duplication in mouse event test code
 
 - Delete irrelevant tests?
