--- a/todo.txt
+++ b/todo.txt
@@ -13,12 +13,12 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- Take care of special cases in our mouse event handling
+* Take care of special cases in our mouse event handling
   - stop drag when it moves outside drawing area
+- Integrate
 - Modify Lint settings for client global variables
 - click tracking needs to account for margin, border, and padding
   - figure out how to factor out common setup code
-- Integrate
 
 To Do on current task:
 
