--- a/todo.txt
+++ b/todo.txt
@@ -8,14 +8,15 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories:
-* Draw a line in response to user mouse
-- Draw a line in response to iOS touch
+* Draw a line in response to iOS touch
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-* Take care of special cases in our mouse event handling
-- Integrate
-- Modify Lint settings for client global variables
+- Spike touch events
+- test-driven basic touch events
+- consider special cases
+
+- Modify Lint settings for client global variables (off-camera)
 - click tracking needs to account for margin, border, and padding
   - figure out how to factor out common setup code
   - test that em is converted px
