--- a/todo.txt
+++ b/todo.txt
@@ -23,6 +23,7 @@ Engineering Tasks:
 
 To Do on current task:
 - BEFORE RECORDING: version checking breaks when using "-pre" (Thx Daniel Auger, http://www.letscodejavascript.com/v3/comments/live/16#comment-795147187)
+- Mention updates to Davide Molin's 'watch' script
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
 
 Future ideas:
