--- a/todo.txt
+++ b/todo.txt
@@ -21,9 +21,10 @@ Engineering Tasks:
   - test that em is converted px
 
 To Do on current task:
-- Make touch event tests work on all browsers (stub them out?)
-- Get first basic touch event test to pass
+- Factor out touch event guard clause
+- test-driven preventDefault()
 - Continue with other touch event behaviors
+- Factor out common code between touch events and mouse events
 
 - Is our client test doing too much--do we need to factor a new module or class?
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
