--- a/todo.txt
+++ b/todo.txt
@@ -21,8 +21,8 @@ Engineering Tasks:
   - test that em is converted px
 
 To Do on current task:
-- test-driven preventDefault()
-- Continue with other touch event behaviors
+- Deal with multiple touches
+- Cleanup / simplify / remove duplication
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
 - Factor out common code between touch events and mouse events
 - Is our client test doing too much--do we need to factor a new module or class?
