--- a/todo.txt
+++ b/todo.txt
@@ -21,6 +21,9 @@ Engineering Tasks:
   - test that em is converted px
 
 To Do on current task:
+- Firefox 19 and "global leak detected" (Mocha config)
+- Note: upgraded to Mocha 1.8.1
+
 - Deal with multiple touches
 - Cleanup / simplify / remove duplication
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
