--- a/todo.txt
+++ b/todo.txt
@@ -12,8 +12,7 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- test-driven basic touch events
-- consider special cases
+* consider special cases
 
 - Modify Lint settings for client global variables (off-camera)
 - click tracking needs to account for margin, border, and padding
