--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,8 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
+- Integrate
+
 - Modify Lint settings for client global variables (off-camera)
 - click tracking needs to account for margin, border, and padding
   - figure out how to factor out common setup code
